# SFML_Template

./: CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindSFML.cmake
